# simulab

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
.circleci/: config.yml
docs/: abstract.md  computational.md  simulation.md
simulab/models/abstract/: model.py
simulab/models/computational/condensation/: model.py
simulab/models/computational/game_of_life/: model.py  seeds.py
simulab/models/computational/real_state_market/: agent.py  formulas.py  model.py
simulab/models/computational/schelling/: model.py
simulab/simulation/core/: lattice.py  neighborhood.py  runner.py
simulab/simulation/plotters/: animated_lattice.py  categorical_animated_lattice.py  final_grid.py  numerical_series.py
src/models/abstract/: agent.py  model.py
src/models/computational/condensation/: model.py
src/models/computational/game_of_life/: model.py  seeds.py
src/models/computational/real_state_market/: agent.py  model.py
src/models/computational/schelling/: model.py
src/simulation/core/: equilibrium_criterion.py  experiment.py  neighborhood.py  runner.py
src/simulation/plotters/: animated_lattice.py  final_grid.py  numerical_series.py
tests/models/computational/: test_condensation.py  test_game_of_life.py  test_schelling.py
tests/models/computational/real_state_market/: test_formulas.py  test_real_state_agent.py  test_real_state_market.py
tests/simulation/core/: test_equilibrium_criterion.py  test_experiment.py  test_lattice.py  test_neighborhood.py  test_runner.py
